--- a/kubernetes/apps/media/plex-auto-languages/app/helmrelease.yaml
+++ b/kubernetes/apps/media/plex-auto-languages/app/helmrelease.yaml
@@ -39,3 +39,6 @@ spec:
         runAsGroup: 1000
         fsGroup: 1000
         fsGroupChangePolicy: OnRootMismatch
+    persistence:
+      config:
+        existingClaim: "{{ .Release.Name }}"
