--- a/kubernetes/apps/download/qbittorrent/ks.yaml
+++ b/kubernetes/apps/download/qbittorrent/ks.yaml
@@ -7,6 +7,7 @@ metadata:
   namespace: &namespace download
 spec:
   components:
+    - ../../../../components/nfs-scaler
     - ../../../../components/volsync
   dependsOn:
     - name: multus-networks
