--- a/kubernetes/apps/download/unpackerr/app/kustomization.yaml
+++ b/kubernetes/apps/download/unpackerr/app/kustomization.yaml
@@ -2,10 +2,7 @@
 # yaml-language-server: $schema=https://json.schemastore.org/kustomization
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: download
 resources:
-  - ./namespace.yaml
-  - ./cross-seed/ks.yaml
-  - ./qbittorrent/ks.yaml
-  - ./seedboxapi/ks.yaml
-  - ./unpackerr/ks.yaml
+  - ./externalsecret.yaml
+  - ./helmrelease.yaml
+  - ./ocirepository.yaml
