--- a/kubernetes/apps/download/unpackerr/app/helmrelease.yaml
+++ b/kubernetes/apps/download/unpackerr/app/helmrelease.yaml
@@ -47,6 +47,7 @@ spec:
                 cpu: 100m
               limits:
                 memory: 8Gi
+    defaultPodOptions:
       securityContext:
         runAsNonRoot: true
         runAsUser: 1000
