feat: Deploy Emby

--- a/kubernetes/apps/media/emby/app/helmrelease.yaml
+++ b/kubernetes/apps/media/emby/app/helmrelease.yaml
@@ -41,7 +41,7 @@ spec:
                   periodSeconds: 10
             securityContext:
               allowPrivilegeEscalation: false
-              readOnlyRootFilesystem: true
+              readOnlyRootFilesystem: false
               capabilities: {drop: ["ALL"]}
             resources:
               limits:
