feat: Deploy Emby

--- a/kubernetes/apps/media/emby/app/helmrelease.yaml
+++ b/kubernetes/apps/media/emby/app/helmrelease.yaml
@@ -17,8 +17,8 @@ spec:
         containers:
           app:
             image:
-              repository: emby/embyserver
-              tag: 4.9.3.0@sha256:338a17ad65a822f18d18574459046003a84d2fee82c2e234adf8645009238d0a
+              repository: ghcr.io/home-operations/emby
+              tag: 4.9.3.0@sha256:7c33d88d0186ad7abcc6e53566e9db8766687daa5510cddc13094e25bc5a5dfb
             env:
               TZ: America/New_York
             probes:
