fix: wrong cluster target

--- a/kubernetes/apps/databases/cloudnative-pg/clusters/postgis/databases/reitti.yaml
+++ b/kubernetes/apps/databases/cloudnative-pg/clusters/postgis/databases/reitti.yaml
@@ -8,7 +8,7 @@ metadata:
     app: reitti
 spec:
   cluster:
-    name: main-db
+    name: postgis
   extensions:
     - name: postgis
       ensure: present
