--- a/kubernetes/apps/default/kustomization.yaml
+++ b/kubernetes/apps/default/kustomization.yaml
@@ -14,6 +14,7 @@ resources:
   - ./mealie/ks.yaml
   - ./paperless/ks.yaml
   - ./radicale/ks.yaml
+  - ./reitti/ks.yaml
   - ./spoolman/ks.yaml
   - ./wallos/ks.yaml
   - ./wikijs/ks.yaml
