feat: Deploy Reitti

--- a/kubernetes/apps/default/reitti/tile-cache/helmrelease.yaml
+++ b/kubernetes/apps/default/reitti/tile-cache/helmrelease.yaml
@@ -38,9 +38,6 @@ spec:
                   timeoutSeconds: 1
                   failureThreshold: 3
               readiness: *probes
-            securityContext:
-              allowPrivilegeEscalation: false
-              capabilities: { drop: ["ALL"] }
     service:
       app:
         ports:
@@ -61,7 +58,7 @@ spec:
                 location / {
                   proxy_pass https://tile.openstreetmap.org/;
                   proxy_set_header Host tile.openstreetmap.org;
-                  proxy_set_header User-Agent \"Reitti/1.0 \\(+https://github.com/dedicatedcode/reitti; contact: reitti@dedicatedcode.com\\)\";
+                  proxy_set_header User-Agent "Reitti/1.0 (+https://github.com/dedicatedcode/reitti; contact: reitti@dedicatedcode.com)";
                   proxy_cache tiles;
                   proxy_cache_valid 200 30d;
                   proxy_cache_use_stale error timeout updating http_500 http_502 http_503 http_504;
