chore: Disable Photon probes until it downloads

--- a/kubernetes/apps/default/reitti/photon/helmrelease.yaml
+++ b/kubernetes/apps/default/reitti/photon/helmrelease.yaml
@@ -22,18 +22,18 @@ spec:
             env:
               UPDATE_STRATEGY: PARALLEL
               REGION: us
-            probes:
-              liveness: &probes
-                enabled: true
-                custom: true
-                spec:
-                  tcpSocket:
-                    port: &port 2322
-                  initialDelaySeconds: 0
-                  periodSeconds: 10
-                  timeoutSeconds: 1
-                  failureThreshold: 3
-              readiness: *probes
+            # probes:
+            #   liveness: &probes
+            #     enabled: true
+            #     custom: true
+            #     spec:
+            #       tcpSocket:
+            #         port: &port 2322
+            #       initialDelaySeconds: 0
+            #       periodSeconds: 10
+            #       timeoutSeconds: 1
+            #       failureThreshold: 3
+            #   readiness: *probes
     service:
       app:
         ports:
