feat: Enable OIDC on Reitti

--- a/kubernetes/apps/default/reitti/app/externalsecret.yaml
+++ b/kubernetes/apps/default/reitti/app/externalsecret.yaml
@@ -13,6 +13,9 @@ spec:
     template:
       engineVersion: v2
       data:
+        OIDC_CLIENT_ID: "{{ .oidc_client_id }}"
+        OIDC_CLIENT_SECRET: "{{ .oidc_client_secret }}"
+        OIDC_ISSUER_URI: "{{ .oidc_issuer }}"
         POSTGIS_USER: "{{ .appUser }}"
         POSTGIS_PASSWORD: "{{ .appPassword }}"
         RABBITMQ_USER: "{{ .rabbitmq_username }}"
