--- a/kubernetes/apps/default/reitti/photon/helmrelease.yaml
+++ b/kubernetes/apps/default/reitti/photon/helmrelease.yaml
@@ -38,7 +38,7 @@ spec:
       app:
         ports:
           http:
-            port: *port
+            port: 2322 #*port
     persistence:
       data:
         existingClaim: "{{ .Release.Name }}"
