--- a/kubernetes/apps/databases/cloudnative-pg/plugins/kustomization.yaml
+++ b/kubernetes/apps/databases/cloudnative-pg/plugins/kustomization.yaml
@@ -5,7 +5,7 @@ kind: Kustomization
 resources:
   # renovate: datasource=github-releases depName=cloudnative-pg/plugin-barman-cloud
   - https://github.com/cloudnative-pg/plugin-barman-cloud/releases/download/v0.10.0/manifest.yaml
-  - ./objectstore
+  - ./objectstore.yaml
 patches:
   - path: ./toleration.yaml
     target:
