feat: Deploy Tracearr

--- a/kubernetes/apps/media/kustomization.yaml
+++ b/kubernetes/apps/media/kustomization.yaml
@@ -24,5 +24,6 @@ resources:
   - ./seerr/ks.yaml
   - ./sonarr/ks.yaml
   - ./tautulli/ks.yaml
+  - ./tracearr/ks.yaml
   - ./tunarr/ks.yaml
   - ./watchstate/ks.yaml
