--- a/kubernetes/apps/media/tracearr/app/externalsecret.yaml
+++ b/kubernetes/apps/media/tracearr/app/externalsecret.yaml
@@ -15,7 +15,7 @@ spec:
       engineVersion: v2
       data:
         COOKIE_SECRET: "{{ .COOKIE_SECRET }}"
-        DATABASE_URL: postgres://"{{ .appUser }}":"{{ .appPassword }}"@timescale-rw.databases:5432/tracearr
+        DATABASE_URL: postgres://{{ .appUser }}:{{ .appPassword }}@timescale-rw.databases:5432/tracearr
         JWT_SECRET: "{{ .JWT_SECRET }}"
   dataFrom:
     - extract:
