--- a/kubernetes/apps/media/tracearr/app/helmrelease.yaml
+++ b/kubernetes/apps/media/tracearr/app/helmrelease.yaml
@@ -21,6 +21,7 @@ spec:
               tag: 1.14.12@sha256:3ac79a0cae844ea4642ae8098a12f2bdea191d5f11c03b38b3085d41ccb36b90
             env:
               LOG_LEVEL: info
+              REDIS_URL: redis://tracearr-valkey:6379
               TZ: America/New_York
             envFrom:
               - secretRef:
