fix: Kometa Plex url was not updated

--- a/kubernetes/apps/media/kometa/app/externalsecret.yaml
+++ b/kubernetes/apps/media/kometa/app/externalsecret.yaml
@@ -331,7 +331,7 @@ spec:
               - collections
               - overlays
             plex:
-                url: {{ .PlexURL }}
+                url: http://plex.media.svc.cluster.local:32400
                 token: {{ .PlexToken }}
                 timeout: 60
                 clean_bundles: true
