chore: Increase Max lock per transaction in Timescale DB

--- a/kubernetes/apps/databases/cloudnative-pg/clusters/timescale/cluster.yaml
+++ b/kubernetes/apps/databases/cloudnative-pg/clusters/timescale/cluster.yaml
@@ -68,6 +68,7 @@ spec:
       shared_buffers: 512MB
       wal_buffers: 16MB
       work_mem: 8MB
+      max_locks_per_transaction: '4096'
     shared_preload_libraries:
       - timescaledb
   postgresGID: 1000
