--- a/.github/workflows/flux-local.yaml
+++ b/.github/workflows/flux-local.yaml
@@ -1,12 +1,14 @@
 ---
+# yaml-language-server: $schema=https://json.schemastore.org/github-workflow.json
 name: Flux Local
 
 on:
   pull_request:
-    branches: ["main"]
+    branches:
+      - main
 
 concurrency:
-  group: ${{ forgejo.workflow_ref }}-${{ forgejo.event.number || forgejo.ref_name }}
+  group: ${{ github.workflow }}-${{ github.event.number || github.ref }}
   cancel-in-progress: true
 
 permissions:
@@ -31,19 +33,29 @@ jobs:
     name: Flux Local - Test
     runs-on: ubuntu-latest
     steps:
+      - name: Generate Token
+        uses: actions/create-github-app-token@29824e69f54612133e76f7eaac726eef6c875baf # v2.2.1
+        id: app-token
+        with:
+          app-id: ${{ secrets.BOT_APP_ID }}
+          private-key: ${{ secrets.BOT_APP_PRIVATE_KEY }}
+
       - name: Checkout
-        uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6
+        uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
         with:
           persist-credentials: false
+          token: ${{ steps.app-token.outputs.token }}
 
       - name: Run flux-local test
         uses: docker://ghcr.io/allenporter/flux-local:v8.1.0
+        env:
+          GITHUB_TOKEN: ${{ steps.app-token.outputs.token }}
         with:
           args: >-
             test
             --all-namespaces
             --enable-helm
-            --path ${{ forgejo.workspace }}/kubernetes/flux/cluster
+            --path /github/workspace/kubernetes/flux/cluster
             --verbose
 
   diff:
@@ -56,30 +68,43 @@ jobs:
       pull-requests: write
     strategy:
       matrix:
-        resource: ["helmrelease", "kustomization"]
+        resource:
+          - helmrelease
+          - kustomization
       fail-fast: false
     steps:
+      - name: Generate Token
+        uses: actions/create-github-app-token@29824e69f54612133e76f7eaac726eef6c875baf # v2.2.1
+        id: app-token
+        with:
+          app-id: ${{ secrets.BOT_APP_ID }}
+          private-key: ${{ secrets.BOT_APP_PRIVATE_KEY }}
+
       - name: Checkout Pull Request Branch
-        uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6
+        uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
         with:
           path: pull
           persist-credentials: false
+          token: ${{ steps.app-token.outputs.token }}
 
       - name: Checkout Default Branch
-        uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6
+        uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
         with:
           path: default
           persist-credentials: false
-          ref: "${{ forgejo.event.repository.default_branch }}"
+          ref: ${{ github.event.repository.default_branch }}
+          token: ${{ steps.app-token.outputs.token }}
 
       - name: Run flux-local diff
         uses: docker://ghcr.io/allenporter/flux-local:v8.1.0
+        env:
+          GITHUB_TOKEN: ${{ steps.app-token.outputs.token }}
         with:
           args: >-
             diff ${{ matrix.resource }}
             --unified 6
-            --path ${{ forgejo.workspace }}/pull/kubernetes/flux/cluster
-            --path-orig ${{ forgejo.workspace }}/default/kubernetes/flux/cluster
+            --path /github/workspace/pull/kubernetes/flux/cluster
+            --path-orig /github/workspace/default/kubernetes/flux/cluster
             --strip-attrs "helm.sh/chart,checksum/config,app.kubernetes.io/version,chart"
             --limit-bytes 10000
             --all-namespaces
@@ -88,25 +113,27 @@ jobs:
 
       - name: Generate Diff
         id: diff
-        run: |
+        run: |-
           echo 'diff<<EOF' >> $GITHUB_OUTPUT
           cat diff.patch >> $GITHUB_OUTPUT
           echo 'EOF' >> $GITHUB_OUTPUT
 
       - if: ${{ steps.diff.outputs.diff != '' }}
         name: Add Comment
-        run: |
-          printf '%s' "${{ steps.diff.outputs.diff }}" \
-          | jq -Rs '{body: "```diff\n\(.)\n```"}' \
-          | curl -X POST \
-            -H "Authorization: token ${{ forgejo.token }}" \
-            -H "Content-Type: application/json" \
-            -d @- \
-            "${{ forgejo.api_url }}/repos/${{ forgejo.repository }}/issues/${{ forgejo.event.pull_request.number }}/comments"
+        uses: marocchino/sticky-pull-request-comment@773744901bac0e8cbb5a0dc842800d45e9b2b405 # v2.9.4
+        with:
+          GITHUB_TOKEN: ${{ steps.app-token.outputs.token }}
+          header: ${{ github.event.pull_request.number }}/kubernetes/${{ matrix.resource }}
+          message: |-
+            ```diff
+            ${{ steps.diff.outputs.diff }}
+            ```
 
   success:
     if: ${{ !cancelled() }}
-    needs: ["test", "diff"]
+    needs:
+      - test
+      - diff
     name: Flux Local - Success
     runs-on: ubuntu-latest
     steps:
