--- a/.github/workflows/label-sync.yaml
+++ b/.github/workflows/label-sync.yaml
@@ -4,11 +4,13 @@ name: Label Sync
 
 on:
   workflow_dispatch:
-  # push:
-  #   branches: ["main"]
-  #   paths: [".forgejo/labels.yaml"]
-  # schedule:
-  #   - cron: "0 0 * * *" # Every day at midnight
+  push:
+    branches:
+      - main
+    paths:
+      - .github/labels.yaml
+  schedule:
+    - cron: 0 0 * * *
 
 permissions:
   contents: read
@@ -22,13 +24,13 @@ jobs:
       issues: write
     steps:
       - name: Checkout
-        uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6
+        uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
         with:
           persist-credentials: false
-          sparse-checkout: .forgejo/labels.yaml
+          sparse-checkout: .github/labels.yaml
 
-      - name: Sync Labels ## This wont work with Fogrejo
+      - name: Sync Labels
         uses: EndBug/label-sync@52074158190acb45f3077f9099fea818aa43f97a # v2.3.3
         with:
-          config-file: .forgejo/labels.yaml
+          config-file: .github/labels.yaml
           delete-other-labels: true
