--- a/kubernetes/apps/actions-runner-system/kustomization.yaml
+++ b/kubernetes/apps/actions-runner-system/kustomization.yaml
@@ -5,5 +5,5 @@ kind: Kustomization
 namespace: actions-runner-system
 resources:
   - ./namespace.yaml
-  # - ./actions-runner-controller/ks.yaml
+  - ./actions-runner-controller/ks.yaml
 
