--- a/kubernetes/apps/network/kustomization.yaml
+++ b/kubernetes/apps/network/kustomization.yaml
@@ -12,7 +12,7 @@ resources:
   - ./cloudflare-dns/ks.yaml
   - ./cloudflare-tunnel/ks.yaml
   - ./envoy-gateway/ks.yaml
-  # - ./external-proxy/ks.yaml
+  - ./external-proxy/ks.yaml
   - ./netbootxyz/ks.yaml
   - ./technitium-dns/ks.yaml
   - ./unifi-dns/ks.yaml
