fix: Unpackerr URLs

--- a/kubernetes/apps/download/unpackerr/app/externalsecret.yaml
+++ b/kubernetes/apps/download/unpackerr/app/externalsecret.yaml
@@ -14,15 +14,15 @@ spec:
     template:
       engineVersion: v2
       data:
-        UN_SONARR_0_URL: http://sonarr
+        UN_SONARR_0_URL: http://sonarr.media.svc.cluster.local
         UN_SONARR_0_API_KEY: "{{ .SonarrAPIKey }}"
         UN_SONARR_0_PATHS: "/media/Downloads/Complete"
         UN_SONARR_0_PROTOCOLS: torrent,usenet
-        UN_RADARR_0_URL: http://radarr
+        UN_RADARR_0_URL: http://radarr.media.svc.cluster.local
         UN_RADARR_0_API_KEY: "{{ .RadarrAPIKey }}"
         UN_RADARR_0_PATHS: "/media/Downloads/Complete"
         UN_RADARR_0_PROTOCOLS: torrent,usenet
-        UN_READARR_0_URL: http://readarr:8787
+        UN_READARR_0_URL: http://readarr.media.svc.cluster.local:8787
         UN_READARR_0_API_KEY: "{{ .ReadarrAPIKey }}"
         UN_READARR_0_PATHS: "/media/Downloads/Complete"
         UN_READARR_0_PROTOCOLS: torrent,usenet
