feat: Deploy Cleanuparr

--- a/kubernetes/apps/download/kustomization.yaml
+++ b/kubernetes/apps/download/kustomization.yaml
@@ -5,6 +5,7 @@ kind: Kustomization
 namespace: download
 resources:
   - ./namespace.yaml
+  - ./cleanuparr/ks.yaml
   - ./cross-seed/ks.yaml
   - ./qbittorrent/ks.yaml
   - ./seedboxapi/ks.yaml
