fix: Add tmp directory

--- a/kubernetes/apps/download/cleanuparr/app/helmrelease.yaml
+++ b/kubernetes/apps/download/cleanuparr/app/helmrelease.yaml
@@ -66,3 +66,8 @@ spec:
     persistence:
       config:
         existingClaim: "{{ .Release.Name }}"
+      tmpfs:
+        type: emptyDir
+        globalMounts:
+          - path: /tmp
+            subPath: tmp
