feat: Add Manyfold DB

--- a/kubernetes/apps/databases/cloudnative-pg/clusters/main/databases/kustomization.yaml
+++ b/kubernetes/apps/databases/cloudnative-pg/clusters/main/databases/kustomization.yaml
@@ -10,6 +10,7 @@ resources:
   - ./homeassistant.yaml
   - ./linkwarden.yaml
   - ./lubelogger.yaml
+  - ./manyfold.yaml
   - ./mealie.yaml
   - ./paperless.yaml
   - ./prowlarr.yaml
