feat: Deploy Manyfold

--- a/kubernetes/apps/default/kustomization.yaml
+++ b/kubernetes/apps/default/kustomization.yaml
@@ -11,6 +11,7 @@ resources:
   - ./karakeep/ks.yaml
   - ./linkwarden/ks.yaml
   - ./lubelogger/ks.yaml
+  - ./manyfold/ks.yaml
   - ./mealie/ks.yaml
   - ./paperless/ks.yaml
   - ./radicale/ks.yaml
